--- a/.github/workflows/plantuml.yml
+++ b/.github/workflows/plantuml.yml
@@ -15,3 +15,5 @@ jobs:
       with:
         path: docs/
         message: "Render PlantUML files"
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
