--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,6 @@
 annotated-types==0.7.0
 anyio==4.11.0
+APScheduler==3.11.1
 blinker==1.9.0
 certifi==2025.10.5
 cffi==2.0.0
@@ -36,6 +37,7 @@ supabase-auth==2.22.2
 supabase-functions==2.22.2
 typing-inspection==0.4.2
 typing_extensions==4.15.0
+tzlocal==5.3.1
 websockets==15.0.1
 Werkzeug==3.1.3
 yarl==1.22.0
